<resources>
    <string name="ADMOB_APP_ID">ca-app-pub-3940256099942544/3419835294</string>
    <string name="bnr_admob" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_admob" translatable="false">/6499/example/native</string>
    <string name="int_admob" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_open_admob" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="video_admob" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="privacy_policy">https://example.com/</string>
    <string name="Link">Link :</string>
    <string name="Rs">₹</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Credit Score &amp; Bank Balance</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="benefits_ans_1">A good Credit Score may get you the best of Credit Cards. Get a feature-loaded card and reap the benefits. If you have a good Credit Score, you can avail loans and Credit Cards faster and with ease.</string>
    <string name="benefits_ans_2">A good Credit Score works like an expressway for your loan application. Banks may approve your application quickly and readily.</string>
    <string name="benefits_ans_3">With the backing of a good Credit Score, you can bargain for a lower rate of interest on loans and Credit Cards.</string>
    <string name="benefits_ans_4">Loans come saddled with processing fees and many other charges. You can bargain your way out of some of these charges with a good Credit Score. Check your Credit Score right away and see if you are eligible for all these benefits. You can check your score on BankBazaar at zero cost.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="buy">Buy Credit Score</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="tips_2_ans_1">A credit score ranges between 300-900. The closer your credit score is to 900, higher the chances are for you to get a good deal for loan as well as credit card. Let\'s take a look at the different credit score range: 10 ➽ NA/NH : In order to calculate your credit score, you need to have a credit history. If you have no credit history, your credit report will mention that your credit score is NA/NH. 10 ➽ 300-550 :A credit score in this range is considered as a poor credit score. It suggests that you have defaulted your payments and have unpaid dues. 10 ➽ 550-650 : A credit score in this range is considered as average. You will still have to take measures to improve your credit score. 10 ➽ 650-750 : A credit score is this range is considered as good and lenders will consider granting you credit in the form of loan or credit card. However, you might still not be in the position to negotiate for a good deal. 10 ➽ 750-900 : With a credit score in this range, you will be less likely to turn as a defaulter and lenders will be willing to offer you with a great deal for loan as well as credit cards. A credit score in this range also gives you the additional power to negotiate for better deal in terms of credit card rewards and interest rates.</string>
    <string name="tips_2_ans_2">➽Your Credit Score is computed by Credit Information Companies. There are four companies in Indian which do the job - CIBIL TransUnion, Experian, Equifax and High Mark.10➽Let\'s unveil the mystery around how these companies compute your score. When you make a transaction the one that is relevant to determine your score banks send details about it to all four credit bureaus.10➽ To send details to all credit agencies is a mandate by the RBI. Essentially, banks keep Credit Information Companies up-to-date about your monetary habits. 10➽If a bank needs to check your Credit Score, they can approach any one of the bureaus. It doesn\'t matter which one because all will have the same score for you all four are equally authoritative and on par with each other. 10➽After receiving information from the bank, credit bureaus get down to the task of collecting more information about your financial habits from other banks and financial institutions. 10➽The credit bureaus then processes this information to formulate what is called a Credit Report. 10 Now, what is a Credit Report? A Credit Report is your financial marks card. It contains your Credit Score. It\'s wiser to check your score from time to time.</string>
    <string name="tips_2_ans_3">It is very important that you keep a close eye on your Credit Score. It is the best way to gauge your chances to get a line of credit. Another reason why you should track your score is to know if it dips, or if an error has been made by credit agencies while calculating your score. This will help you make timely amends.</string>
    <string name="tips_2_ans_4">Though the processes followed to compute your score might differ from agency to agency, your Credit Score calculated by all will be the same. This is because banks intimate the relevant information to all four agencies. Therefore, no matter which agency a bank picks to check your Credit Score, there will be no major discrepancy in it. 10 Of the four agencies, CIBIL, however, is the most popular since it was one of the first Credit Information Companies to start operations in India. This has fuelled the notion that CIBIL Score is more accurate than a score from other agencies. This, however, is not true. Banks give equal weightage to scores from all four agencies. Equifax Experian and High Mark Credit Scores are as good to banks and other financial institutions as CIBIL Score. 10 BankBazaar has tied up with Experian, which means that we can help you check your Credit Score for free. Otherwise, it costs a few hundred rupees.</string>
    <string name="tips_2_ans_5">Though many believe this, it\'s not true. 10➽ All Credit Information Companies, including CIBIL, create your Credit Reports which tell banks about you credibility. 10➽Second, CIBIL and the other credit agencies do not entertain requests from individuals to make changes to financial details in Credit Reports. Changes are incorporated when banks provide relevant information to these agencies. 10➽This ensures that information in your Credit Report is legitimate. After all, your Credit Score is one of the most important factors considered by banks when deciding about your loan or Credit Card application. Your Credit Score also determines the interest rate banks chalk up for you. 10➽ So make sure that you score big on this one!</string>
    <string name="tips_2_ans_6">BankBazaar feels that you should always be in complete command of your personal finances. In order to help you with this goal, we have made provisions for you to check your Credit Score for free. Knowing your Credit Score before applying for a loan can help greatly. 10➽ If you have a good score, you can be rest assured that your loan or Credit Card application will be processed without any hassle. You can even leverage a good score to ask your lender bank for better rates of interest and additional benefits. 10➽On the other hand, seeking credit with a poor score will further lower your score. Let\'s not even imagine getting approval for a credit line. Hence, check your Credit Score before you apply for a financial product. Work up the score if it\'s not in the acceptable range. 10➽ TIP: Credit agencies review and renew your score every few months. If you have a poor Credit Score, start managing your money wisely and pay your dues on time for a good few months. Credit agencies will reward you by boosting your score.</string>
</resources>