<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainbg"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/backkk"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/fontsemibold"
            android:text="Range Tips"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/nativeLay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp">

            <FrameLayout
                android:id="@+id/native_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp" />

            <RelativeLayout
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/t1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/fontsemibold"
                            android:lineSpacingExtra="1dp"
                            android:text="Credit Score Range and What It Means"
                            android:textColor="#fff"
                            android:textSize="20sp" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/fontmedium"
                        android:lineSpacingExtra="1dp"
                        android:text="@string/tips_2_ans_1"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:visibility="visible" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/t3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/fontsemibold"
                            android:lineSpacingExtra="1dp"
                            android:text="Who Computes Credit Score?"
                            android:textColor="#fff"
                            android:textSize="20sp" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/fontmedium"
                        android:lineSpacingExtra="1dp"
                        android:text="@string/tips_2_ans_2"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:visibility="visible" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/t2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/fontsemibold"
                            android:lineSpacingExtra="1dp"
                            android:text="Why Should I check my Credit Score"
                            android:textColor="#fff"
                            android:textSize="20sp" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/fontmedium"
                        android:lineSpacingExtra="1dp"
                        android:text="@string/tips_2_ans_3"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:visibility="visible" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/fontsemibold"
                            android:lineSpacingExtra="1dp"
                            android:text="Do the Four Credit Agencies Compute Scores Differently?"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/fontmedium"
                        android:lineSpacingExtra="1dp"
                        android:text="@string/tips_2_ans_4"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:visibility="visible" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/fontsemibold"
                            android:lineSpacingExtra="1dp"
                            android:text="Isn&apos;t CIBIL the Deciding Factor in a Loan?"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/fontmedium"
                        android:lineSpacingExtra="1dp"
                        android:text="@string/tips_2_ans_5"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:visibility="visible" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/fontsemibold"
                            android:lineSpacingExtra="1dp"
                            android:text="Why is BankBazaar Giving me my Credit Score for Free?"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/fontmedium"
                        android:lineSpacingExtra="1dp"
                        android:text="@string/tips_2_ans_6"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:visibility="visible" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/nativeLay"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" />
</RelativeLayout>
